--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vite": "^5.1.6"
   },
   "dependencies": {
-    "less": "^4.2.0"
+    "glob": "^10.3.10",
+    "less": "^4.2.0",
+    "vite-plugin-minify": "^1.5.2",
+    "vite-plugin-purgecss": "^0.2.12"
   }
 }
